[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402-bazaar"
version = "1.3.0"
description = "Python SDK for x402 Bazaar — autonomous API marketplace with auto-payment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wintyx", email = "robin@wintyx.com" },
]
keywords = ["x402", "api", "marketplace", "payment", "usdc", "blockchain", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "eth-account>=0.13",
    "pydantic>=2.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.80"]
all = ["langchain-core>=0.3", "crewai>=0.80"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://x402.ai"
Repository = "https://github.com/Wintyx57/x402-sdk-python"
Documentation = "https://github.com/Wintyx57/x402-sdk-python#readme"
Changelog = "https://github.com/Wintyx57/x402-sdk-python/blob/master/CHANGELOG.md"
Issues = "https://github.com/Wintyx57/x402-sdk-python/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Skip live integration tests by default — run with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that hit real backend (run with '-m integration')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"x402_bazaar/types.py" = ["N815"]  # chainId matches API response format

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
